--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
+    "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "i": "^0.3.7",
     "lucide-react": "^0.525.0",
