--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "i": "^0.3.7",
@@ -27,6 +28,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
     "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^3.3.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
